--- a/public/ginas/css/drugs.css
+++ b/public/ginas/css/drugs.css
@@ -1,3 +1,9 @@
+html,
+      body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
 span.second-header {
     /* color: purple; */
     size: large;
@@ -726,13 +732,24 @@ for representation in record details card */
     padding-bottom: 10px;
 }
 
+#wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
 /* footer styling */
+#push {
+    height: 120px;  /* same height as footer */
+}
 .inxight-footer {
-    margin-top: 10px;
     background: #f8f8f8;
     color: white;
     padding: 10px;
     padding-left: 60px;
+    height: 120px;
 }
 
 .inxight-footer .container {
