Some CSS tweaks for the landing page Updated text on landing page Fix pub link on About Added a check for queries with very high occurences such as benzene and straight chain alkanes (<= 7 C) and prevent searching for them Bumped version number

--- a/public/ginas/css/drugs.css
+++ b/public/ginas/css/drugs.css
@@ -4,6 +4,10 @@ html,
         /* The html and body elements cannot have any padding or margin. */
       }
 
+p {
+    padding-top: 1em;
+}
+
 span.second-header {
     /* color: purple; */
     size: large;
